--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2021.10.8
 charset-normalizer==2.0.12
 click==8.1.2
 colorama==0.4.4
+dateutils==0.6.12
 filelock==3.6.0
 Flask==2.1.1
 Flask-Cors==3.0.10
@@ -23,7 +24,9 @@ packaging==21.3
 psycopg2-binary==2.9.3
 pyparsing==3.0.8
 PySocks==1.7.1
+python-dateutil==2.8.2
 python-dotenv==0.20.0
+pytz==2022.1
 requests==2.27.1
 requests-file==1.5.1
 six==1.16.0
@@ -35,4 +38,3 @@ Werkzeug==2.1.1
 zipp==3.8.0
 zope.event==4.5.0
 zope.interface==5.4.0
-python-dateutil~=2.8.2
